# tracker-miner-media

./: .gitignore  AUTHORS  Makefile.am  NEWS  autogen.sh  config.h.in  configure.ac  tracker-miner-media.doap
data/: Makefile.am  org.freedesktop.Tracker1.Miner.Media.service.in  tracker-miner-media.desktop.in.in
po/: LINGUAS  POTFILES.in  bs.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  fur.po  hu.po  id.po  it.po  ko.po  lt.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  zh_CN.po
src/: Makefile.am  main.c  tracker-miner-media.c  tracker-miner-media.h
